--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 
     <title>Frontend Mentor | Order summary card</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
-        
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-    </style>
 </head>
 
 <body>
 
-    Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order
+    <header>
+        <img src="images/illustration-hero.svg" width="30%" height="30%">
+        <h1>Order Summary</h1>
+    </header>
+
+    <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+
+    <div class="plan">
+        <p>Annual Plan $59.99/year</p>
+        <input type="button" value="Change">
+    </div>
+    <br>
+    <input type="button" value="Proceed to Payment">
+    <br>
+    <input type="button" value="Cancel Order">
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
