--- a/index.html
+++ b/index.html
@@ -7,32 +7,34 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Frontend Mentor | Order summary card</title>
 
 </head>
 
 <body>
+    <main>
+        <header>
+            <img src="images/illustration-hero.svg" width="30%" height="30%">
+            <h1>Order Summary</h1>
+        </header>
 
-    <header>
-        <img src="images/illustration-hero.svg" width="30%" height="30%">
-        <h1>Order Summary</h1>
-    </header>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-    <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        <div class="plan">
+            <p>Annual Plan $59.99/year</p>
+            <input type="button" value="Change">
+        </div>
+        <br>
+        <input type="button" value="Proceed to Payment" id="payment">
+        <br>
+        <input type="button" value="Cancel Order">
 
-    <div class="plan">
-        <p>Annual Plan $59.99/year</p>
-        <input type="button" value="Change">
-    </div>
-    <br>
-    <input type="button" value="Proceed to Payment">
-    <br>
-    <input type="button" value="Cancel Order">
-
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
-    </div>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
+        </div>
+    </main>
 </body>
 
 </html>
