--- a/index.html
+++ b/index.html
@@ -16,25 +16,33 @@
 <body>
     <main>
         <header>
-            <img src="images/illustration-hero.svg" width="30%" height="30%">
-            <h1>Order Summary</h1>
+            <img src="images/illustration-hero.svg">
         </header>
 
-        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        <section>
+            <h1>Order Summary</h1>
+            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-        <div class="plan">
-            <p>Annual Plan $59.99/year</p>
-            <input type="button" value="Change">
-        </div>
-        <br>
-        <input type="button" value="Proceed to Payment" id="payment">
-        <br>
-        <input type="button" value="Cancel Order">
+            <div class="plan">
+                <img src="./images/icon-music.svg" alt="icon">
+                <h3>Annual Plan</h3>
+                <p>$59.99/year</p>
+                <a href="">Change</a>
+            </div>
 
-        <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
-        </div>
+            <br>
+
+            <div id="input">
+                <input type="button" value="Proceed to Payment" id="payment">
+                <br>
+                <input type="button" value="Cancel Order">
+            </div>
+
+        </section>
     </main>
+    <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
+    </footer>
 </body>
 
 </html>
