Formmating endded just need to format plan class

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </header>
 
         <section>
-            <h1>Order Summary</h1>
+            <h1 class="bold">Order Summary</h1>
             <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
             <div class="plan">
                 <img src="./images/icon-music.svg" alt="icon">
-                <h3>Annual Plan</h3>
+                <h3 class="bold">Annual Plan</h3>
                 <p>$59.99/year</p>
                 <a href="">Change</a>
             </div>
@@ -33,15 +33,14 @@
             <br>
 
             <div id="input">
-                <input type="button" value="Proceed to Payment" id="payment">
-                <br>
-                <input type="button" value="Cancel Order">
+                <div id="payment" class="bold" class="shadow">Proceed to Payment</div>
+                <p class="bold">Cancel Order</p>
             </div>
 
         </section>
     </main>
     <footer class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">caraplana1</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/caraplana1" target="_blank">caraplana1</a>.
     </footer>
 </body>
 
