Plan class box centered

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
             <div class="plan">
                 <img src="./images/icon-music.svg" alt="icon">
-                <h3 class="bold">Annual Plan</h3>
-                <p>$59.99/year</p>
+                <div class="text">
+                    <b>Annual Plan</b>
+                    <p>$59.99/year</p> 
+                </div>
                 <a href="">Change</a>
             </div>
 
