div.plan formmating done!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="shadow">
         <header>
             <img src="images/illustration-hero.svg">
         </header>
