Box shadows and active payment-box styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section>
             <h1 class="bold">Order Summary</h1>
-            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+            <p id="main">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
             <div class="plan">
                 <img src="./images/icon-music.svg" alt="icon">
@@ -39,7 +39,7 @@
             <br>
 
             <div id="input">
-                <div id="payment" class="bold" class="shadow">Proceed to Payment</div>
+                <div id="payment"><b>Proceed to Payment</b></div>
                 <p class="bold">Cancel Order</p>
             </div>
 
