Active styles done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div id="input">
                 <div id="payment"><b>Proceed to Payment</b></div>
-                <p class="bold">Cancel Order</p>
+                <p class="bold" id="cancel">Cancel Order</p>
             </div>
 
         </section>
