--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br>
 
             <div id="input">
-                <div id="payment"><b>Proceed to Payment</b></div>
+                <div id="payment" class="shadow"><b>Proceed to Payment</b></div>
                 <p class="bold" id="cancel">Cancel Order</p>
             </div>
 
